# FedA-Text-Analytics

./: README.md  pyproject.toml  run.py  server.py
mimic_3_data/: README.md
mimic_4_data/: README.md
mimic_4_utility_scripts/: export_mimic_pdfs.py
models/: README.md
